--- a/index.html
+++ b/index.html
@@ -3,47 +3,55 @@
   <head>
     <meta charset="UTF-8">
     <script src="https://use.fontawesome.com/869eca7664.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Trailerz</title>
   </head>
 
   <body>
 
     <header>
+      <div class="navigation">
+        <h1 class="logo">Trailerz</h1>
 
-      <h4>Trailerz</h4>
-
-      <nav>
-        <ul>
-          <li>Movies</li>
-          <li>TV Shows</li>
-          <li>Video Games</li>
-          <li>News</li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Games</a></li>
+            <li><a href="#">TV Shows</a></li>
+            <li><a href="#">Movies</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
-    <div>
+    <section class="featured-trailer">
+      <div class="banner-wrapper">
 
-      <img src="/assets/img/star-wars-last-jedi.jpg" alt="">
-      <i class="fa fa-play-circle" aria-hidden="true"></i>
-      <h2>Star Wars The Last Jedi</h2>
+        <div class="poster">
+          <img class="featured-img" src="/assets/img/movies/star-wars-last-jedi.jpg" alt="">
+          <i class="fa fa-play-circle play-btn" aria-hidden="true"></i>
+        </div>
 
-      <i class="fa fa-star-o" aria-hidden="true"></i>
-      <i class="fa fa-star-o" aria-hidden="true"></i>
-      <i class="fa fa-star-o" aria-hidden="true"></i>
-      <i class="fa fa-star-o" aria-hidden="true"></i>
-      <i class="fa fa-star-half-o" aria-hidden="true"></i>
+        <div class="featured-title">
+          <h2>Star Wars:<br> The Last Jedi</h2>
+          <div class="rating">
+            <i class="fa fa-star-o" aria-hidden="true"></i>
+            <i class="fa fa-star-o" aria-hidden="true"></i>
+            <i class="fa fa-star-o" aria-hidden="true"></i>
+            <i class="fa fa-star-o" aria-hidden="true"></i>
+            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+          </div>
+        </div>
 
-      <p>Having taken her first steps into a larger world in Star Wars: The Force Awakens (2015), Rey continues her epic journey with Finn, Poe and Luke Skywalker in the next chapter of the saga.</p>
-      <br>
-      <p> PG-13 | 2:02 min | Action, Adventure, Fantasy | 15 December 2017</p>
+          <p>Having taken her first steps into a larger world in Star Wars: The Force Awakens (2015), Rey continues her epic journey with Finn, Poe and Luke Skywalker in the next chapter of the saga.</p> <br>
+          <!--<span>PG-13 | 2:02 min | Action, Adventure, Fantasy | 15 December 2017</span>-->
 
-    </div>
+      </div>
+    </section>
 
-    <div>
+    <div class="row">
       <h2>Popular Movies</h2>
-      <h4>View All Movies</h4>
+      <h5><a href="#">View All Movies</a></h5>
       <img src="/assets/img/movies/justice-league.jpg" alt="">
       <img src="/assets/img/movies/spider-man-homecoming.jpg" alt="">
       <img src="/assets/img/movies/star-wars-last-jedi.jpg" alt="">
@@ -52,9 +60,9 @@
       <img src="/assets/img/movies/star-wars-rebels.jpg" alt="">
     </div>
 
-    <div>
+    <div class="row">
       <h2>Popular TV Shows</h2>
-      <h4>View All TV Shows</h4>
+      <h5><a href="#">View All TV Shows</a></h5>
       <img src="/assets/img/tv/planet-of-the-apps.jpg" alt="">
       <img src="/assets/img/tv/grand-tour.jpg" alt="">
       <img src="/assets/img/tv/planet-earth-2.jpg" alt="">
@@ -63,9 +71,9 @@
       <img src="/assets/img/tv/survivor.jpg" alt="">
     </div>
 
-    <div>
+    <div class="row">
       <h2>Popular Games</h2>
-      <h4>View All Games</h4>
+      <h5><a href="#">View All Games</a></h5>
       <img src="/assets/img/games/fifa_17.jpg" alt="">
       <img src="/assets/img/games/forza_horizon_3_cover.jpg" alt="">
       <img src="/assets/img/games/portal.jpg" alt="">
@@ -74,11 +82,11 @@
       <img src="/assets/img/games/rocket-league.jpg" alt="">
     </div>
 
-    <div>
+    <div class="cta">
       <h2>Get the best Movie, TV & Game trailers straight in your inbox each week.</h2>
       <input type="text" name="" id="" placeholder="First Name">
       <input type="email" name="" id="" placeholder="Email Address">
-      <button>Subscribe</button>
+      <button class="subs">Subscribe</button>
     </div>
 
     <footer>
